feat: add hints routes
